--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -61,7 +61,7 @@
                 <div id="slide"><img src="images/slide1.jpg" alt="slide images" id="myimage"></div>
                 <button id="previous">←</button> 
                 <button id="next">→</button>
-                <p>I don't like my handwriting and drawing, so I collect all kinds of things (tickets, table paper, napkins, candy wrappers, etc.) and make them into my scrapbook as my journal. When my friends come to visit me, I always share my traveling stories with them by looking at what I have collected inside my book. <br><br> Click on different images and see the story behind them. <br><br>I also have some empty pages in my scrapbook. The emptiness also means something.</p>
+                <p>I don't like my handwriting and drawing, so I collect all kinds of things (tickets, table paper, napkins, candy wrappers, etc.) and make them into my scrapbook as my journal. When my friends come to visit me, I always share my traveling stories with them by looking at what I have collected inside my book. <br><br> Click on different images at the main page and see the story behind them. <br><br>I also have some empty pages in my scrapbook. The emptiness also means something.</p>
                 <button class="close">×</button>
             </article>
         </section>
