project brief to portal

--- a/des157/index.html
+++ b/des157/index.html
@@ -64,7 +64,7 @@
             <h2>DEVELOPMENT</h2>
             <!-- <h2>RESEARCH & DEVELOPMENT</h2> -->
             <ul>
-                <li><a href="#">Project Brief</a></li>
+                <li><a href="final/brief.html">Project Brief</a></li>
                 <li><a href="#">Digital Comp</a></li>
                 <li><a href="#">Refined Comp</a></li>
                 <li><a href="#">Prototype 1</a></li>
