--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -50,8 +50,7 @@
 
             <article class="aprilTT">
                 <h2>April 22th, 2021</h2>
-                <h3>Sometimes a Designer, but Most of the Time: 
-                    <br><b>A User</b></h3>
+                <h3>Sometimes a Designer, but Most of the Time: A User</h3>
 
                 <p class="link">Reading Link: <a href="https://www.nngroup.com/articles/overuse-of-overlays/">Overuse of Overlays: How to Avoid Misusing Lightboxes by Kathryn Whitenton</a></p>
                 <p class="content">Even though this article is more from the designers' perspective, I feel a profound resonance as a user. I keep facing the annoying overlays and popping lightboxes almost every day when I try to search for something online. Many shopping websites urgently want to get people's attention as fast as possible so that they can spend money in a second without hesitation. It's funny that we have random advertisements and promotions filling up our mailboxes, and they seem to follow the technology: they turn into digital media as promotional codes. 
