--- a/des157/index.html
+++ b/des157/index.html
@@ -65,7 +65,7 @@
             <!-- <h2>RESEARCH & DEVELOPMENT</h2> -->
             <ul>
                 <li><a href="final/brief.html">Project Brief</a></li>
-                <li><a href="https://docs.google.com/document/d/1llHO5p_mM1_4pRSAIvMwkzzz8jv8biYXKKq5_WWuq9Y/edit">Digital Comp</a></li>
+                <li><a href="final/images/comp.jpg">Digital Comp</a></li>
                 <li><a href="#">Refined Comp</a></li>
                 <li><a href="#">Prototype 1</a></li>
                 <li><a href="#">User Test</a></li>
