general layout and function

--- a/des157/studio3/index.html
+++ b/des157/studio3/index.html
@@ -17,24 +17,42 @@
     <div id="wrap">
         <header>
             <h1>Game of PIG</h1>
+            <div id="gamecontrol">
+                <button id="startgame">Random Pick Your Character, and Start Your Fight!!!</button>
+            </div>
         </header>
 
         <main>
             <div id="container">
                 <section class="left">
+                    <div id="score1"></div>
                     <h2>FIRE PIG</h2>
-                    <img src="#" alt="player1" class="fire">
+                    <img src="images/firepig.png" alt="player1" class="fire">
                 </section>
 
                 <section class="center">
-                    <button id="startgame">Start!</button>
+                    <!-- <div id="gamecontrol">
+                        <button id="startgame">Random Pick Your Character, and Start Your Fight!!!</button>
+                    </div> -->
+
+                    <div id="game"></div>
+                    <div id="actions"></div>
                 </section>
 
                 <secion class="right">
+                    <div id="score2"></div>
                     <h2>SHINING PIG</h2>
-                    <img src="#" alt="player2" class="shining">
+                    <img src="images/shiningpig.png" alt="player2" class="shining">
                 </secion>
             </div>
+
+            <section id="overlay" class="hidden">
+                <article>
+                    <h2>Credits:</h2>
+                    <p>Images: Zoey<br>Background Music: Ben Sound</p>
+                    <button class="close">close</button>
+                </article>
+            </section>
         </main>
 
         <footer>
@@ -42,15 +60,20 @@
                 <li>
                     <p>There are two players. The player whose turn it is rolls the dice. The total of the roll is added to the current player's score, unless either die comes up as a "one". If this happens, this player's turn is over, and it is the other player’s turn. After each roll, the current player can either roll again, (assuming a "one" was not rolled) or if the current player feels that luck is running thin, they can pass to the other player. The first player to get 30 points or higher wins. Oh, and if you roll two "ones" (snake eyes), your current score gets zeroed out. So don’t do that.</p>
                 </li>
-                <li>
-                    <a href="mailto:&#120;&#108;&#122;&#108;&#105;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email Address</a>
-                </li>
-                <li>
-                    <a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/studio3/index.html">Valid HTML 5</a>
-                </li>
-                <li>
-                    <a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/studio3/styles.css">Valid CSS</a>
-                </li>
+                <div id="footerWrap">
+                    <li>
+                        <a href="#" class="credit">Credit</a>
+                    </li>
+                    <li>
+                        <a href="mailto:&#120;&#108;&#122;&#108;&#105;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email Address</a>
+                    </li>
+                    <li>
+                        <a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/studio3/index.html">Valid HTML 5</a>
+                    </li>
+                    <li>
+                        <a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/studio3/styles.css">Valid CSS</a>
+                    </li>
+            </div>
             </ul>
         </footer>
     </div>
