--- a/des157/studio3/index.html
+++ b/des157/studio3/index.html
@@ -8,7 +8,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 
     <!-- google fonts -->
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption&family=Reggae+One&display=swap" rel="stylesheet">
+    
     <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
 
@@ -17,8 +19,9 @@
     <div id="wrap">
         <header>
             <h1>Game of PIG</h1>
+            <p>Instruction: There are two players. The player whose turn it is rolls the dice. The total of the roll is added to the current player's score, unless either die comes up as a "one". If this happens, this player's turn is over, and it is the other player’s turn. After each roll, the current player can either roll again, (assuming a "one" was not rolled) or if the current player feels that luck is running thin, they can pass to the other player. The first player to get 30 points or higher wins. Oh, and if you roll two "ones" (snake eyes), your current score gets zeroed out. So don’t do that.</p>
             <div id="gamecontrol">
-                <button id="startgame">Random Pick Your Character, and Start Your Fight!!!</button>
+                <button id="startgame">Fight!!!</button>
             </div>
         </header>
 
@@ -31,10 +34,6 @@
                 </section>
 
                 <section class="center">
-                    <!-- <div id="gamecontrol">
-                        <button id="startgame">Random Pick Your Character, and Start Your Fight!!!</button>
-                    </div> -->
-
                     <div id="game"></div>
                     <div id="actions"></div>
                 </section>
@@ -53,13 +52,11 @@
                     <button class="close">close</button>
                 </article>
             </section>
+
         </main>
 
         <footer>
             <ul>
-                <li>
-                    <p>There are two players. The player whose turn it is rolls the dice. The total of the roll is added to the current player's score, unless either die comes up as a "one". If this happens, this player's turn is over, and it is the other player’s turn. After each roll, the current player can either roll again, (assuming a "one" was not rolled) or if the current player feels that luck is running thin, they can pass to the other player. The first player to get 30 points or higher wins. Oh, and if you roll two "ones" (snake eyes), your current score gets zeroed out. So don’t do that.</p>
-                </li>
                 <div id="footerWrap">
                     <li>
                         <a href="#" class="credit">Credit</a>
