refined comp image added

--- a/des157/studio3/index.html
+++ b/des157/studio3/index.html
@@ -19,7 +19,7 @@
     <div id="wrap">
         <header>
             <h1>Game of PIG</h1>
-            <p>Instruction: There are two players. The player whose turn it is rolls the dice. The total of the roll is added to the current player's score, unless either die comes up as a "one". If this happens, this player's turn is over, and it is the other player’s turn. After each roll, the current player can either roll again, (assuming a "one" was not rolled) or if the current player feels that luck is running thin, they can pass to the other player. The first player to get 30 points or higher wins. Oh, and if you roll two "ones" (snake eyes), your current score gets zeroed out. So don’t do that.</p>
+            <p>Instruction: Life is like a boxing fight. You never know what's going to happen next. When you are ready, click Fight button, and the system will choose your lucky pig for you. Each pig </p>
             <div id="gamecontrol">
                 <button id="startgame">Fight!!!</button>
             </div>
