everything done for game of pig

--- a/des157/studio3/index.html
+++ b/des157/studio3/index.html
@@ -19,7 +19,14 @@
     <div id="wrap">
         <header>
             <h1>Game of PIG</h1>
-            <p>Instruction: Life is like a boxing fight. You never know what's going to happen next. When you are ready, click Fight button, and the system will choose your lucky pig for you. Each pig </p>
+
+                <ul>
+                    <div id="footerWrap">
+                        <li><a href="#" class="instruction">Instruction</a></li>
+                        <li><a href="#" class="bgm">Stop Background Music</a></li>
+                    </div>
+                </ul>
+
             <div id="gamecontrol">
                 <button id="startgame">Fight!!!</button>
             </div>
@@ -48,8 +55,16 @@
             <section id="overlay" class="hidden">
                 <article>
                     <h2>Credits:</h2>
-                    <p>Images: Zoey<br>Background Music: Ben Sound</p>
+                    <p>Images: Zoey Li<br><br>Background Music: Ben Sound</p>
                     <button class="close">close</button>
+                </article>
+            </section>
+
+            <section id="overlay2" class="hidden">
+                <article>
+                    <h2>Instruction:</h2>
+                    <p>Life is like a boxing game: you never know what is going to happen next. <br><br>Today we have two fighters. When you are ready, click the Fight button below the banner and see which amazing PIG fighter you will get today. Each turn the current fighter has a chance to attack, and the fighter will get points based on the hooks. <br><br>The game is always DANGEROUS, and it's easy to hurt yourself! When it happens, the fighter will receive a "Doctor Stop!" The points will also be zeroed out. <br><br>The first fighter to get 25 points or higher wins!! <br><br>Now, are you ready to fight? Get your lucky PIG for today right now!!!</p>
+                    <button class="close2">close</button>
                 </article>
             </section>
 
@@ -70,7 +85,7 @@
                     <li>
                         <a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/studio3/styles.css">Valid CSS</a>
                     </li>
-            </div>
+                </div>
             </ul>
         </footer>
     </div>
