--- a/des157/final/brief.html
+++ b/des157/final/brief.html
@@ -9,7 +9,7 @@
 
     <!-- google fonts -->
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="brief-style.css">
 </head>
 <body>
     <div id="wrap">
