--- a/des157/final/proto/index.html
+++ b/des157/final/proto/index.html
@@ -22,7 +22,7 @@
         <img src="images/border-bottom.png" alt="border-bottom" class="border-bottom">
     </div>
     
-    <div id="wrap">
+    <div id="scrolling">
         <header>
             <h1>Dear Xinlei Li,</h1>
         </header>
@@ -46,20 +46,19 @@
                     <img src="images/2014.png" alt="keywords" class="keywords">
                 </article>
 
-
             </div>
         </main>
 
+        <footer>
+            <ul>
+                <li>
+                    <a href="#" class="open" id="story">About this page</a>
+                </li>
+                <li><a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/final/proto/index.html">Valid HTML5</a></li>
+                <li><a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/final/proto/style.css">Valid CSS</a></li>
+            </ul>
+        </footer>
     </div>
-
-    <footer>
-        <ul>
-            <li>
-                <a href="#" class="open" id="story">About this page</a>
-            </li>
-            <li><a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/final/proto/index.html">Valid HTML5</a></li>
-            <li><a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/final/proto/style.css">Valid CSS</a></li>
-        </ul>
-    </footer>
+    
 </body>
 </html>
