--- a/des157/final/proto/index.html
+++ b/des157/final/proto/index.html
@@ -30,6 +30,7 @@
         <main>
 
             <div id="container">
+                <div class="empty-space"></div>
 
                 <article class="years">
                     <h2>2014</h2>
@@ -59,6 +60,6 @@
             </ul>
         </footer>
     </div>
-    
+
 </body>
 </html>
