form issue fixed

--- a/des157/final/proto/index.html
+++ b/des157/final/proto/index.html
@@ -197,13 +197,19 @@
         <article>
             <h3>What will you write to the future you?</h3>
 
-            <div id="submit-letter"></div>
-            
-            <from action="processor.php" method="POST" id="myform">
+            <form id="myform">
                 <textarea id="user-letter" name="user-letter" cols="30" rows="5">Hi ...</textarea>
                 <br>
                 <input type="submit" name="submit" id="submit" value="Submit">
-            </from>
+            </form>
+
+            <button class="close">×</button>
+        </article>
+    </section>
+
+    <section id="ol-year8-b" class="overlay hidden">
+        <article>
+            <h3>What will you write to the future you?</h3>
 
             <button class="close">×</button>
         </article>
