--- a/des157/index.html
+++ b/des157/index.html
@@ -69,7 +69,7 @@
                 <li><a href="final/images/refined.png">Refined Comp</a></li>
                 <li><a href="#">Prototype 1</a></li>
                 <li><a href="final/proto/index.html">User Test</a></li>
-                <li><a href="#">User Test Results</a></li>
+                <li><a href="final/usertest-result/index.html">User Test Results</a></li>
             </ul>
         </section>
 
