--- a/des157/final/usertest-result/index.html
+++ b/des157/final/usertest-result/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning Journals</title>
+    <title>User Test Results</title>
 
     <!-- style sheets -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
@@ -45,8 +45,8 @@
     <footer>
         <ul>
             <li><a href="mailto:&#120;&#108;&#122;&#108;&#105;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email Address</a></li>
-            <li><a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/lj/index.html">Valid HTML 5</a></li>
-            <li><a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/lj/index.html">Valid CSS</a></li>
+            <li><a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/final/usertest-result/index.html">Valid HTML 5</a></li>
+            <li><a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/final/usertest-result/styles.css">Valid CSS</a></li>
         </ul>
     </footer>
 </body>
