final project link

--- a/des157/index.html
+++ b/des157/index.html
@@ -76,7 +76,7 @@
         <section class="right">
             <h2>FINAL</h2>
             <ul>
-                <li><a href="#">Final Project</a></li>
+                <li><a href="final/index.html">Final Project</a></li>
             </ul>
         </section>
 
