--- a/des157/final/index.html
+++ b/des157/final/index.html
@@ -231,6 +231,7 @@
     <div id="scrolling">
         <header>
             <h1>" Hello Xinlei Li , </h1>
+            <h2>click on the images >>></h2>
         </header>
 
         <main>
@@ -267,7 +268,7 @@
                 </article>
 
                 <article class="years open" id="year8">
-                    <h2>?</h2>
+                    <h2>???</h2>
                 </article>
 
                 <div class="empty-space"></div>
