--- a/des157/final/index.html
+++ b/des157/final/index.html
@@ -231,7 +231,7 @@
     <div id="scrolling">
         <header>
             <h1>" Hello Xinlei Li , </h1>
-            <h2>click on the images >>></h2>
+            <h2>scroll and click on the images >>></h2>
         </header>
 
         <main>
