--- a/des157/index.html
+++ b/des157/index.html
@@ -67,7 +67,7 @@
                 <li><a href="final/brief.html">Project Brief</a></li>
                 <li><a href="final/images/comp.jpg">Digital Comp</a></li>
                 <li><a href="final/images/refined.png">Refined Comp</a></li>
-                <li><a href="#">Prototype 1</a></li>
+                <li><a href="https://docs.google.com/document/d/1HDrbT-HwgfImWbytzPPMY3UQIkqeHgkbB46D5swiGv0/edit?usp=sharing">Prototype 1</a></li>
                 <li><a href="final/proto/index.html">User Test</a></li>
                 <li><a href="final/usertest-result/index.html">User Test Results</a></li>
             </ul>
